[gd_scene load_steps=5 format=3 uid="uid://xi52lb0xqyku"]

[ext_resource type="Script" path="res://creature_page.gd" id="1_51768"]
[ext_resource type="Texture2D" uid="uid://cb60arg8qlnpu" path="res://creatures/creature (1).png" id="1_q68np"]
[ext_resource type="LabelSettings" uid="uid://b2u1y2af2c71i" path="res://properties_label_settigns.tres" id="2_web2x"]

[sub_resource type="LabelSettings" id="LabelSettings_hdflx"]
font_size = 27
shadow_size = 8
shadow_color = Color(0.505882, 0.352941, 0.486275, 1)

[node name="CreaturePage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51768")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_q68np")

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Creature name goes here"
label_settings = SubResource("LabelSettings_hdflx")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 38
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AttackLabel" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Attack: ??"
label_settings = ExtResource("2_web2x")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PreviousButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Previous
"

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/NextButton" to="." method="_on_next_button_pressed"]
